test/langtools/tools/javac/patterns/UnnamedErrors.out
UnnamedErrors.java:9:17: compiler.err.underscore.as.identifier
UnnamedErrors.java:10:18: compiler.err.underscore.as.identifier
UnnamedErrors.java:11:23: compiler.err.underscore.as.identifier
UnnamedErrors.java:12:19: compiler.err.underscore.as.identifier
UnnamedErrors.java:17:26: compiler.err.underscore.as.identifier
UnnamedErrors.java:19:26: compiler.err.underscore.as.identifier
UnnamedErrors.java:22:18: compiler.err.underscore.as.identifier
UnnamedErrors.java:29:18: compiler.err.restricted.type.not.allowed.here: var
UnnamedErrors.java:29:22: compiler.err.underscore.as.identifier
UnnamedErrors.java:72:18: compiler.err.underscore.as.identifier
UnnamedErrors.java:72:19: compiler.err.expected: token.identifier
UnnamedErrors.java:31:13: compiler.err.unconditional.pattern.and.default
UnnamedErrors.java:40:18: compiler.err.pattern.dominated
UnnamedErrors.java:49:29: compiler.err.flows.through.from.pattern
UnnamedErrors.java:56:29: compiler.err.flows.through.from.pattern
UnnamedErrors.java:63:32: compiler.err.flows.through.from.pattern
16 errors